--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "pagebot",
+  "name": "pagebot-render",
   "version": "1.0.0",
+  "description": "Simple Pagebot",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "body-parser": "^1.20.2",
     "axios": "^1.6.0",
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
     "fs-extra": "^11.1.1",
     "gradient-string": "^2.0.2",
-    "chalk": "^4.1.2"
+    "chalk": "^4.1.2",
+    "gpti": "^2.0.3",
+    "fontstyles": "^1.0.0",
+    "form-data": "^4.0.0"
   }
 }
