--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "form-data": "^4.0.1",
     "fs-extra": "^11.3.0",
     "gradient-string": "^2.0.2",
-    "chalk": "^5.3.0",
-    "fontstyles": "^1.2.1"
+    "chalk": "^5.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
