--- a/config.json
+++ b/config.json
@@ -1,7 +1,8 @@
 {
-  "PAGE_ACCESS_TOKEN": "REPLACED_BY_RENDER",
-  "VERIFY_TOKEN": "REPLACED_BY_RENDER",
-  "ADMINS": ["100093157180148"],
+  "PAGE_ACCESS_TOKEN": "REPLACED_BY_RENDER_ENV",
+  "CHIPP_API_KEY": "REPLACED_BY_RENDER_ENV",
+  "VERIFY_TOKEN": "pagebot123",
+  "ADMINS": ["100080066120536"],
   "PREFIX": "!",
   "BOTNAME": "Amdusbot",
   "clearData": false,
