--- a/package.json
+++ b/package.json
@@ -1,28 +1,20 @@
 {
-  "name": "my-pagebot",
-  "version": "1.0.0",
-  "description": "Facebook Messenger Page Bot by Sethdico",
+  "name": "amdusbot",
+  "version": "15.0.0",
+  "description": "Multi-AI Messenger Bot",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
-  },
-  "keywords": ["messenger", "facebook", "bot", "ai"],
-  "author": "Sethdico",
-  "license": "MIT",
-  "engines": {
-    "node": ">=18.0.0 <=22.x"
+    "start": "node index.js"
   },
   "dependencies": {
-  "express": "^4.21.1",
-  "body-parser": "^1.20.3",
-  "axios": "^1.7.7",
-  "form-data": "^4.0.1",
-  "fs-extra": "^11.3.0",
-  "gradient-string": "^2.0.2",
-  "chalk": "^4.1.2"
-},
-  "devDependencies": {
-    "nodemon": "^3.1.9"
+    "express": "^4.18.0",
+    "axios": "^1.6.0",
+    "form-data": "^4.0.0",
+    "fs-extra": "^11.0.0",
+    "gradient-string": "^2.0.0",
+    "chalk": "^5.0.0"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
